--- a/exercicios/aula04/ex001.html
+++ b/exercicios/aula04/ex001.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Primeiro script</title>
+    <style>
+h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(16, 207, 207);
+    font-size: 3em;
+    font-weight: lighter;
+}
+    </style>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
+    <p>Me livrei da maldição.</p>
+    <script>
+        window.alert('Minha primeira mensagem')
+        window.confirm('Está gostando de JavaScript?')
+        window.prompt('Qual é o seu nome?')   
+    </script>
 </body>
 </html>
