aula 05 variaveis e tipos

--- a/exercicios/aula04/ex001.html
+++ b/exercicios/aula04/ex001.html
@@ -6,6 +6,7 @@
     , initial-scale=1.0">
     <title>Primeiro script</title>
     <style>
+        /* Esta é a parte de estilo do documento */
 h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: rgb(16, 207, 207);
@@ -15,11 +16,14 @@ h1{
     </style>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
+    <h1>Olá, Mundo!</h1> <!-- Essa é a parte do conteúdo -->
     <p>Me livrei da maldição.</p>
     <script>
+        // exibe um alerta na tela, antes do restante do conteúdo
         window.alert('Minha primeira mensagem')
+        // exibe uma mensagem com opções de ok e cancelar
         window.confirm('Está gostando de JavaScript?')
+        // Exibe uma mensagem com uma caixa de texto para inserir valores
         window.prompt('Qual é o seu nome?')   
     </script>
 </body>
