ex002 - manipulando variaveis

--- a/exercicios/aula06/ex002.html
+++ b/exercicios/aula06/ex002.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        window.prompt('Qual o seu nome?')
+    </script>
 </body>
 </html>
