--- a/js-oo/js/index.html
+++ b/js-oo/js/index.html
@@ -13,6 +13,6 @@
             <p id="dados"></p>
         </section>
     </main>
-    <script src="/js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
