--- a/js-oo/js/index.html
+++ b/js-oo/js/index.html
@@ -10,11 +10,11 @@
     <main class="tela-principal">
         <section id="conteudos">
             <h1>Calculadora de IMC</h1>
-            <form action='' method='POST' id='formulario'>
+            <form action='' method='post' id='formulario'>
 
-                <!-- <div id='mensagem'></div>
+                <div id='mensagem'></div>
 
-                <div class='form-group'>
+                <!-- <div class='form-group'>
                     <label for="idPessoa">ID</label>
                     <input 
                         type="number"
@@ -85,6 +85,10 @@
                 </div>
 
             </form>
+            <!-- view -->
+            <div id="dados">
+                <!-- table -->
+            </div>
         </section>
     </main>
     <script type="module" src="../js/api/views/main.js"></script>
