--- a/js-oo/js/index.html
+++ b/js-oo/js/index.html
@@ -91,6 +91,6 @@
             </div>
         </section>
     </main>
-    <script type="module" src="../js/api/views/main.js"></script>
+    <script type="module" src="../js/api/main.js"></script>
 </body>
 </html>
